--- a/PixelBlaster/documentation/todo.txt
+++ b/PixelBlaster/documentation/todo.txt
@@ -8,21 +8,16 @@ High Level
 [X] Let the player move
 [X] Add an XML-based map system
 [X] Add one bubble (mass?)
-[ ] Add a bubble meter
-[ ] Add a bubble powerup
+[X] Add a bubble meter
+[X] Add a bubble powerup
 [ ] Add one enemy
 
-
-Details - Add a bubble meter
----------------------------
-[ ] Add a meter to the top left labeled "bubble power"
-[ ] Cause the meter to regenerate over time
-[ ] When the player's bubble is active, decrease the meter at a steady rate
 
 Details - Add one Bubble
 ----------
 [X] Show a bubble graphic centered on player when the player presses a key
 [X] Turn bubble off when player presses key again
+[ ] Bug - player's apparent position shifts when bubble is toggled
 [ ] Increase mass of player when bubble is active
 
 Details - Add one enemy
@@ -30,3 +25,10 @@ Details - Add one enemy
 [ ] Enemy spawns with map
 [ ] Enemy collides with player
 [ ] Enemy causes player to respawn when hit
+
+
+Details - Add a bubble meter
+---------------------------
+[X] Add a meter to the top left labeled "bubble power"
+[X] Cause the meter to regenerate over time
+[X] When the player's bubble is active, decrease the meter at a steady rate
